# subsync

./: .gitignore  README.md  config.json.example  pyproject.toml  subsync.py  subsync_download.py
src/subsync/: __main__.py
src/syncsonic/: __main__.py  download.py
