[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subsync"
version = "0.0.1"
authors = [
  { name="Tepiloxtl", email="tepiloxtl@tepiloxtl.net" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = ["requests"]

[project.urls]
Homepage = "http://tepiloxtl.net"
Issues = "http://tepiloxtl.net"