[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncsonic"
version = "0.1.0"
authors = [
  { name="Tepiloxtl", email="tepiloxtl@tepiloxtl.net" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = ["requests"]

[project.scripts]
syncsonic = "syncsonic.__main__:main"

[project.urls]
Homepage = "https://github.com/tepiloxtl/syncsonic"
Issues = "https://github.com/tepiloxtl/syncsonic/issues"