[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncsonic"
version = "0.1.1"
authors = [
  { name="Tepiloxtl", email="tepiloxtl@tepiloxtl.net" },
]
description = "Download media from subsonic server for local playback and scrobble plays back to server "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console"
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = ["requests"]

[project.scripts]
syncsonic = "syncsonic.__main__:main"

[project.urls]
Homepage = "https://github.com/tepiloxtl/syncsonic"
Issues = "https://github.com/tepiloxtl/syncsonic/issues"